--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="sub-viewport" id="m1"></div>
                 <div class="mt-8 flex justify-between items-end">
                     <div>
-                        <h3 class="font-black text-xl uppercase tracking-tighter miku-text">Project 01</h3>
+                        <h3 class="font-black text-xl uppercase tracking-tighter miku-text">Con Cụt</h3>
                         <p class="text-[9px] text-white/40 uppercase tracking-widest mt-1">Studio Viewport / STL</p>
                     </div>
                     <div class="text-[8px] font-bold text-white/20 border border-white/10 px-3 py-1 rounded-full italic">VTP 3D</div>
@@ -57,7 +57,27 @@
             <div class="viewport-box">
                 <div class="sub-viewport" id="m2"></div>
                 <div class="mt-8 flex justify-between items-end">
-                    <div><h3 class="font-black text-xl uppercase tracking-tighter miku-text">Project 02</h3><p class="text-[9px] text-white/40 uppercase tracking-widest mt-1">Studio Viewport / STL</p></div>
+                    <div><h3 class="font-black text-xl uppercase tracking-tighter miku-text">Con Gót</h3><p class="text-[9px] text-white/40 uppercase tracking-widest mt-1">Studio Viewport / STL</p></div>
+                    <div class="text-[8px] font-bold text-white/20 border border-white/10 px-3 py-1 rounded-full italic">VTP 3D</div>
+                </div>
+            </div>
+            <div class="viewport-box">
+                <div class="sub-viewport" id="m1"></div>
+                <div class="mt-8 flex justify-between items-end">
+                    <div>
+                        <h3 class="font-black text-xl uppercase tracking-tighter miku-text">Project 03</h3>
+                        <p class="text-[9px] text-white/40 uppercase tracking-widest mt-1">Studio Viewport / STL</p>
+                    </div>
+                    <div class="text-[8px] font-bold text-white/20 border border-white/10 px-3 py-1 rounded-full italic">VTP 3D</div>
+                </div>
+            </div>
+            <div class="viewport-box">
+                <div class="sub-viewport" id="m1"></div>
+                <div class="mt-8 flex justify-between items-end">
+                    <div>
+                        <h3 class="font-black text-xl uppercase tracking-tighter miku-text">Project 01</h3>
+                        <p class="text-[9px] text-white/40 uppercase tracking-widest mt-1">Studio Viewport / STL</p>
+                    </div>
                     <div class="text-[8px] font-bold text-white/20 border border-white/10 px-3 py-1 rounded-full italic">VTP 3D</div>
                 </div>
             </div>
@@ -150,4 +170,5 @@
     </script>
 </body>
 </html>
+
 
