--- a/index.html
+++ b/index.html
@@ -24,10 +24,6 @@
             transform: translate(-50%, -50%); background: rgba(57, 197, 187, 0.1); display: none;
         }
 
-        /* --- REVEAL ANIMATION SYNC --- */
-        .reveal { opacity: 0; transform: translateY(30px); transition: all 0.8s cubic-bezier(0.2, 0.8, 0.2, 1); }
-        .reveal.active { opacity: 1; transform: translateY(0); }
-
         /* --- LOADER --- */
         #loader {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
@@ -39,14 +35,14 @@
         #loader-progress { position: absolute; left: 0; top: 0; height: 100%; width: 0%; background: var(--miku); transition: width 0.2s ease; }
         .loader-percentage { font-family: monospace; font-size: 6rem; font-weight: 900; color: var(--miku); opacity: 0.15; position: absolute; bottom: 5%; right: 5%; line-height: 1; }
 
-        /* --- NAV LINK --- */
+        /* --- NAV LINK (BACK TO HOME BUTTON) --- */
         .nav-link {
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1); 
             padding: 8px 25px; 
             border-radius: 9999px; 
-            border: 1px solid rgba(57, 197, 187, 0.5);
-            color: #ffffff; 
-            background: rgba(57, 197, 187, 0.05); 
+            border: 1px solid rgba(57, 197, 187, 0.5); /* Khung line xanh mờ */
+            color: #ffffff; /* Chữ trắng mặc định */
+            background: rgba(57, 197, 187, 0.05); /* Nền xanh rất nhẹ */
             font-size: 10px; 
             font-weight: 900; 
             letter-spacing: 2px; 
@@ -55,8 +51,8 @@
         }
         .nav-link:hover { 
             background: rgba(57, 197, 187, 0.15); 
-            color: var(--miku); 
-            border-color: var(--miku); 
+            color: var(--miku); /* Chữ đổi màu xanh khi hover */
+            border-color: var(--miku); /* Khung sáng lên */
             box-shadow: 0 0 15px rgba(57, 197, 187, 0.3);
             transform: translateY(-1px);
         }
@@ -80,10 +76,9 @@
         /* --- CONTACT SECTION SYNC --- */
         .contact-social-link {
             font-size: 11px; font-weight: 900; letter-spacing: 0.3em; color: #4a5d71;
-            position: relative; transition: color 0.3s ease, transform 0.3s ease;
-            display: inline-block;
+            position: relative; transition: color 0.3s ease;
         }
-        .contact-social-link:hover { color: var(--miku); transform: translateY(-2px); }
+        .contact-social-link:hover { color: var(--miku); }
         .contact-social-link::after {
             content: ''; position: absolute; width: 0; height: 1px; bottom: -4px; left: 0;
             background-color: var(--miku); transition: width 0.3s ease;
@@ -126,7 +121,7 @@
         <a href="https://phatvo0401.github.io/" class="nav-link">Back to home</a>
     </nav>
 
-    <header class="pt-56 pb-20 text-center reveal">
+    <header class="pt-56 pb-20 text-center">
         <h1 class="text-6xl md:text-9xl font-black mb-6 uppercase italic tracking-tighter">GALLERY <span class="text-[#39c5bb]">3D</span></h1>
         <p class="text-white/20 tracking-[0.6em] uppercase text-[10px]">Lưu trữ mô hình dự án cá nhân</p>
     </header>
@@ -135,11 +130,11 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 max-w-7xl w-full" id="main-grid"></div>
     </main>
 
-    <footer id="contact" class="py-32 text-center border-t border-[#39c5bb]/10 bg-[#050a09] reveal">
-        <h3 class="text-[12px] font-black mb-12 text-[#39c5bb] uppercase tracking-[0.4em] italic">Let's work together</h3>
+    <footer id="contact" class="py-32 text-center border-t border-[#39c5bb]/10 bg-[#050a09]">
+        <h3 class="text-[12px] font-black mb-12 text-[#39c5bb] uppercase tracking-[0.4em]">Let's work together</h3>
         
         <div class="mb-16">
-            <a href="mailto:phatvo.0401@gmail.com" class="text-2xl md:text-4xl font-bold tracking-tighter hover:text-[#39c5bb] transition-all duration-300 inline-block">
+            <a href="mailto:phatvo.0401@gmail.com" class="text-2xl md:text-4xl font-bold tracking-tighter hover:text-[#39c5bb] transition-colors duration-300">
                 phatvo.0401@gmail.com
             </a>
             <p class="text-gray-500 text-[10px] uppercase tracking-[0.3em] mt-6 italic font-light">
@@ -177,17 +172,6 @@
             cursor.style.left = e.clientX + 'px';
             cursor.style.top = e.clientY + 'px';
         });
-
-        // --- REVEAL ANIMATION OBSERVER ---
-        const observerOptions = { threshold: 0.15 };
-        const observer = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.classList.add('active');
-                }
-            });
-        }, observerOptions);
-        document.querySelectorAll('.reveal').forEach(el => observer.observe(el));
 
         // --- LOADER ---
         const loaderNum = document.getElementById('loader-num');
@@ -266,11 +250,10 @@
         const grid = document.getElementById('main-grid');
         myModels.forEach(m => {
             const card = document.createElement('div');
-            card.className = 'viewport-card reveal'; // Added reveal class for cards
+            card.className = 'viewport-card';
             card.innerHTML = `<div class="three-container" id="${m.id}"></div><div class="mt-8 flex justify-between items-end"><div><h3 class="font-black text-xl uppercase tracking-tighter text-[#39c5bb]">${m.name}</h3><p class="text-[9px] text-white/40 uppercase tracking-widest mt-1">${m.desc}</p></div><div class="text-[8px] font-bold text-white/20 border border-white/10 px-3 py-1 rounded-full italic">VTP 3D</div></div>`;
             grid.appendChild(card);
             init3D(m.id, m.file);
-            observer.observe(card); // Start observing new cards
         });
 
         const btt = document.getElementById('backToTop');
@@ -279,4 +262,3 @@
     </script>
 </body>
 </html>
-
