--- a/index.html
+++ b/index.html
@@ -139,9 +139,12 @@
         </div>
     </nav>
 
-    <header class="pt-56 pb-20 text-center">
-        <h1 class="text-5xl md:text-8xl font-black mb-4 uppercase italic tracking-tighter">
-            GALLERY <span class="gradient-text">3D</span>
+    <header class="pt-56 pb-20 text-center px-4">
+        <h1 class="text-5xl md:text-8xl font-black mb-4 uppercase italic leading-tight">
+            GALLERY 
+            <span class="gradient-text pr-2 md:pr-4 inline-block not-italic">
+                <span class="italic">3D</span>
+            </span>
         </h1>
         <p class="text-white/50 font-medium tracking-[0.5em] uppercase text-[9px] md:text-[11px]">Lưu trữ mô hình dự án cá nhân</p>
     </header>
@@ -289,3 +292,4 @@
     </script>
 </body>
 </html>
+
