--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         const myModels = [
             { id: 'm1', name: 'Con Cụt', file: 'model.stl', desc: '3D Artist: AI' },
             { id: 'm2', name: 'Con Gót', file: 'model2.stl', desc: '3D Artist: AI' },
-            { id: 'm3', name: 'Project 03', file: 'model.stl', desc: '3D Artist: AI' },
+            { id: 'm3', name: 'Project 03', file: 'model3.stl', desc: '3D Artist: AI' },
             { id: 'm4', name: 'Project 04', file: 'model.stl', desc: '3D Artist: AI' }
         ];
 
@@ -295,5 +295,6 @@
     </script>
 </body>
 </html>
+
 
 
