--- a/index.html
+++ b/index.html
@@ -173,10 +173,12 @@
 
         // DANH SÁCH FILE (Hệ thống tự nhận diện đuôi file)
         const myModels = [
-            { id: 'm1', name: 'Falcon Pose', file: 'falcon_pose.stl', desc: '3D Artist: VTP' },
-            { id: 'm2', name: 'Project Video', file: 'render_360.mp4', desc: 'Render: 360 Degree' },
-            { id: 'm3', name: 'Concept Art', file: 'art_preview.jpg', desc: 'Design: Photoshop' },
-            { id: 'm4', name: 'Dau Project', file: 'Dau.stl', desc: '3D Artist: AI' }
+            { id: 'm1', name: 'Falcon Pose', file: 'avt.JPG', desc: '3D Artist: VTP' },
+            { id: 'm2', name: 'Project Video', file: 'model.stl', desc: '3D Artist:....' }
+        ];' },
+            { id: 'm3', name: 'Concept Art', file: 'model2.stl', desc: '3D Artist:....' }
+        ];' },
+            { id: 'm4', name: 'Dau Project', file: 'Dau.stl', desc: '3D Artist:....' }
         ];
 
         // CURSOR
@@ -320,3 +322,4 @@
     </script>
 </body>
 </html>
+
