--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             { id: 'm1', name: 'Con Cụt', file: 'model.stl', desc: '3D Artist: AI' },
             { id: 'm2', name: 'Con Gót', file: 'model2.stl', desc: '3D Artist: AI' },
             { id: 'm3', name: 'Project 03', file: 'Dau.stl', desc: '3D Artist: AI' },
-            { id: 'm4', name: 'Project 04', file: 'avt.JPG', desc: '3D Artist: AI' }
+            { id: 'm4', name: 'Project 04', file: 'squirtle.stl', desc: '3D Artist: AI' }
         ];
 
         function init3D(id, path) {
@@ -320,4 +320,5 @@
 </script>
 </body>
 </html>
+
 
