--- a/index.html
+++ b/index.html
@@ -206,10 +206,11 @@
 
         // DANH SÁCH DỮ LIỆU (STL, IMAGE, VIDEO)
         const myModels = [
-            { id: 'm1', name: 'Con Cụt', file: 'model.stl', type: 'stl', desc: '3D Artist: AI' },
-            { id: 'm2', name: 'Con Gót', file: 'image.jpg', type: 'image', desc: 'Graphic Design: VTP' },
-            { id: 'm3', name: 'Motion Video', file: 'demo.mp4', type: 'video', desc: 'Motion Artist: VTP' },
-            { id: 'm4', name: 'Squirtle 3D', file: 'squirtle.stl', type: 'stl', desc: '3D Artist: AI' }
+            { id: 'm1', name: 'Con Cụt', file: 'model.stl', type: 'stl', desc: '3D Artist:' },
+            { id: 'm2', name: 'Con Gót', file: 'model2.jpg', type: 'image', desc: '3D Artist:' },
+            { id: 'm3', name: 'Motion Video', file: 'Dau.stl', type: 'video', desc: '3D Artist:' },
+            { id: 'm4', name: 'Squirtle 3D', file: 'squirtle.stl', type: 'stl', desc: '3D Artist:' },
+            { id: 'm5', name: 'Squirtle 3D', file: 'avt,JPG', type: 'stl', desc: '3D Artist:' }
         ];
 
         function init3D(id, path) {
@@ -316,3 +317,4 @@
     </script>
 </body>
 </html>
+
