--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
         // DANH SÁCH DỮ LIỆU (STL, IMAGE, VIDEO)
         const myModels = [
             { id: 'm1', name: 'Con Cụt', file: 'model.stl', type: 'stl', desc: '3D Artist:' },
-            { id: 'm2', name: 'Con Gót', file: 'model2.jpg', type: 'image', desc: '3D Artist:' },
+            { id: 'm2', name: 'Con Gót', file: 'model2.stl', type: 'image', desc: '3D Artist:' },
             { id: 'm3', name: 'Motion Video', file: 'Dau.stl', type: 'video', desc: '3D Artist:' },
             { id: 'm4', name: 'Squirtle 3D', file: 'squirtle.stl', type: 'stl', desc: '3D Artist:' },
-            { id: 'm5', name: 'Squirtle 3D', file: 'avt,JPG', type: 'stl', desc: '3D Artist:' }
+            { id: 'm5', name: 'Squirtle 3D', file: 'avt.JPG', type: 'stl', desc: '3D Artist:' }
         ];
 
         function init3D(id, path) {
@@ -317,4 +317,5 @@
     </script>
 </body>
 </html>
+
 
