--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             { id: 'm1', name: 'Dự án', file: 'avt.JPG', type: 'image', desc: '3D Artist:' },
             { id: 'm2', name: 'Con Cụt', file: 'model.stl', type: 'stl', desc: '3D Artist:' },
             { id: 'm3', name: 'Con Gót', file: 'model2.stl', type: 'stl', desc: '3D Artist:' },
-            { id: 'm4', name: 'Dự án 360 (Demo)', file: 'Demo.mp4', type: 'Video', desc: '3D Artist:' },
+            { id: 'm4', name: 'Dự án 360 (Demo)', file: 'Demo.mp4', type: 'video', desc: '3D Artist:' },
             { id: 'm5', name: 'Pokemon', file: 'squirtle.stl', type: 'stl', desc: '3D Artist:' }
         ];
 
@@ -317,6 +317,7 @@
     </script>
 </body>
 </html>
+
 
 
 
